# inicio-faucet

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  amplify.yml  docker-compose.yml  faucet.toml.example
.claude/: launch.json
.github/workflows/: docker.yml  faucet-healthcheck.yml
deploy/: Caddyfile  aws-provision.sh  ec2-user-data.sh  iam-secrets-policy.json
src/: config.rs  create_faucet.rs  http.rs  main.rs  mint.rs  worker.rs
static/: app.js  config.js  game.js  index.html  style.css
