[package]
name = "inicio-faucet"
version = "0.1.0"
edition = "2021"
description = "Internal-only faucet service: mints test tokens (P2ID notes) to wallet addresses for testing the wallet and the nProtocol DEX."

# Miden crates track 0xMiden upstream `next`, exactly like the solver (a working
# sibling inicio service on rpc.testnet.miden.io). The exact commits are pinned in
# Cargo.lock to the same proven 0.15.0 combo the solver resolves
# (miden-client 715a560 / protocol c6f1ecf), so notes minted here are compatible
# with the live testnet the wallet/DEX use. Use `branch = "next"` (not a per-crate
# `rev`) so the protocol repo unifies to a single source with miden-client's own
# internal protocol deps; the lockfile is what fixes the version. To move versions,
# `cargo update`. For a fork-based private testnet, repoint these to the fork.
[dependencies]
miden-client = { git = "https://github.com/0xMiden/miden-client", branch = "next", default-features = false, features = ["std", "tonic"] }
miden-client-sqlite-store = { git = "https://github.com/0xMiden/miden-client", branch = "next" }
miden-protocol = { git = "https://github.com/0xMiden/protocol", branch = "next" }
miden-standards = { git = "https://github.com/0xMiden/protocol", branch = "next" }

tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi", "std"] }
rand = "0.9"
base64 = "0.22"
