[package]
name = "inicio-faucet"
version = "0.1.0"
edition = "2021"
description = "Internal-only faucet service: mints test tokens (P2ID notes) to wallet addresses for testing the wallet and the nProtocol DEX."

# Miden crates use the crates.io 0.15.0 release — the same version the deployed
# public-testnet faucet (faucet.testnet.miden.io) is built from, so this client
# speaks the protocol the live node at rpc.testnet.miden.io expects. All types are
# pulled from `miden-client` re-exports (no direct protocol/standards deps).
[dependencies]
miden-client = { version = "0.15", features = ["tonic"] }
miden-client-sqlite-store = "0.15"

tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi", "std"] }
rand = "0.9"
base64 = "0.22"
